--- a/project0/project0/example.html
+++ b/project0/project0/example.html
@@ -11,6 +11,7 @@
         </style>
     </head>
     <body>
+        <a href="grid.html">click here</a>
         <h1 class="center">This is heading1</h1>
         <p class="center">This is a paragraph</p>
     </body>
