--- a/project0/project0/first.html
+++ b/project0/project0/first.html
@@ -2,13 +2,8 @@
 <html>
     <head>
         <title>Create Stylesheets</title>
-        <link ref="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
         <style>
-            /* #para{
-                border:2px;
-                color:red;
-                text-align:center
-            } */
             div{
                 background-color:orange;
                 width:200px;
@@ -31,5 +26,6 @@
             <input type="text" placeholder="name" name="name">
             <button>submit</button>
         </form>
+        <a href="nested.html">click here</a>
     </body>
 </html>
