--- a/project0/project0/sample.html
+++ b/project0/project0/sample.html
@@ -4,7 +4,7 @@
         <title>My page</title>
     </head>
     <body>
-        Welcome to my page
+        <h1>Welcome to my page</h1>
         <a href="contact.html">click here</a>
     </body>
 </html>
