--- a/project0/project0/contact.html
+++ b/project0/project0/contact.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>About me</title>
-        <link ref="stylesheet" href="style1.css">
+        <link rel="stylesheet" href="style1.css">
         <div id="image">
             <img src="bindu.jpg" width="100" height="100">
         </div>
@@ -56,7 +56,7 @@
         </style>
     </head>
     <body>
-        <b>Welcome to my journey at MSIT</b>
+        <h1>Welcome to my journey at MSIT</h1>
         <a href="myjourney.html">Welcome to my journey</a>
         <ol>
             <li>Name</li>
