--- a/project0/project0/index.html
+++ b/project0/project0/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>My Webpage</title>
-        <link ref="stylesheet" href="cascading.css">
+        <link rel="stylesheet" href="cascading.css">
     </head>
     <body>
-        <p>Hello, world!</p>
+        <h1>Hello, world!</h1>
         <a href="sample.html">click here</a>
     </body>
 </html>
