--- a/project0/project0/myjourney.html
+++ b/project0/project0/myjourney.html
@@ -45,20 +45,6 @@
                 border:2px solid blue;
             }
         </style>
-        <div>
-            <input name="country" list="radio" placeholder="country">
-            <datalist id="countries">
-                <option value="Afganisthan"></option>
-                <option value="Bangladesh"></option>
-                <option value="canada"></option>
-                <option value="china"></option>
-                <option value="denmark"></option>
-                <option value="france"></option>
-                <option value="India"></option>
-                <option value="srilanka"></option>
-                <option value="pakisthan"></option>
-            </datalist>
-        </div>
     </head>
     <body>
         <h1>List Of Courses</h1>
@@ -121,8 +107,20 @@
             </tr>
         </table>
         <form>
-            <input type="text" value="done">
+                <input name="country" list="radio" placeholder="country">
+                <datalist id="countries">
+                    <option value="Afganisthan"></option>
+                    <option value="Bangladesh"></option>
+                    <option value="canada"></option>
+                    <option value="china"></option>
+                    <option value="denmark"></option>
+                    <option value="france"></option>
+                    <option value="India"></option>
+                    <option value="srilanka"></option>
+                    <option value="pakisthan"></option>
+                </datalist>
             <input type="button" value="submit">
         </form>
+        <a href="first.html">click here</a>
     </body>
 </html>
